package physics;

public class Air extends Fluid{
    // Construtor do "Fluid" "Air"
    protected Air() {
        super(1.29f);
    }
}
